--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,7 +70,8 @@ a:hover {
 
 //main-container全局样式
 .app-main {
-  min-height: 100%
+  min-height: 100%;
+  background: #D2E0E1;
 }
 
 .app-container {
