update newsboard, assignment UI

--- a/src/styles/crm.scss
+++ b/src/styles/crm.scss
@@ -22,4 +22,54 @@
 // GMAPS position
 .pac-container {
     z-index: 9999;
-  }
+}
+
+// Typograph
+.crm-heading-title {
+    font-size: 26px;
+    font-weight: 300;
+}
+
+.crm-heading-medium-title {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.crm-heading-small-title {
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.crm-heading-content {
+    margin-top: 5px;
+    font-size: 14px;
+}
+
+// BORDER
+.crm-border-bottom {
+    border-bottom: 1px solid;
+    border-color:#D3D3D3;
+}
+
+// DIMENSION
+.crm-row-bg {
+    margin-top: 5px;
+    margin-bottom:5px;
+}
+
+// COLOR
+.crm-color-primary {
+
+}
+
+.crm-color-primary-light {
+    background-color: #FFFFE0;
+}
+
+.crm-color-status-open {
+    background-color: #006400;
+}
+
+.crm-color-status-stop {
+    background-color: #FF4500;
+}
