--- a/src/styles/crm.scss
+++ b/src/styles/crm.scss
@@ -45,6 +45,37 @@
     font-size: 14px;
 }
 
+.crm-profile-name {
+    font-size: 28px;
+    font-weight: 400;
+    color: #2c3e50;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.crm-profile-company {
+    font-size: 16px;
+    font-weight: 400;
+    color: #2c3e50;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.crm-profile-content {
+    font-size: 14px;
+    font-weight: 300;
+    color: #34495e;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+//IMAGE
+.crm-profile-picture {
+    border-radius: 100%;
+    margin-top: 10px;
+}
+
 // BORDER
 .crm-border-bottom {
     border-bottom: 1px solid;
